# Bulletin

./: .gitignore  LICENSE  README.md  database.db  package-lock.json  package.json
.devcontainer/: devcontainer.json
Backend/: Director.js  Login.js  ServerMain.js  UnitTests.js  database.db  package-lock.json  package.json
Backend/Database/: database.db
Backend/Database_API/: DB_Info.txt  EventManagement.js  UserManagement.js
C-remake/: API_Documentation.txt
C-remake/monolithic/: CMakeLists.txt  database.db
C-remake/monolithic/copy/: CMakeCache.txt  CPackConfig.cmake  Makefile  bulletin  (+2 more)
C-remake/standard/: database.db
C-remake/standard/src/backend/: meson.build
Calendar-API/: API_Documentation.txt
Calendar-API/monolithic/: CMakeLists.txt
Calendar-API/standard/src/api/: meson.build
Calendar-API/standard/src/api/include/: event_management.h
Calendar-API/standard/src/api/src/: director.c  user_management.c
Calendar-API/standard/src/database/: database.db  meson.build
Calendar-API/standard/src/database/include/: database.h
Calendar-API/standard/src/database/src/: main.c
Mobile/: settings.gradle.kts
Mobile/Development/: settings.gradle.kts
Mobile/app/: build.gradle.kts
Server/: API_Documentation.txt  DB_Info.txt  Database.js  DatabaseTerminal.js  DatabaseTest.js  ServerMain.js  TestAPI.js  TestConnection.cs  TestConnection.java  UnitTests.js  database.db
Server/API/: Login.js
Server/Backend/: main.cc  package-lock.json  package.json  useful_commands.txt
Server/C#_TCP_Connection_Test/: C#_TCP_Connection_Test.csproj  C#_TCP_Connection_Test.sln  TcpClientExample.cs
Server/C-remake/: API_Documentation.txt  CMakeLists.txt  Makefile  main
Server/C-remake/include/: database.h  director.h  error_handling.h  user_management.h
Server/C-remake/include/api/: event_management.h  user_management.h
Server/C-remake/include/database/: database.h
Server/C-remake/include/lib/: string_utils.h
Server/C-remake/monolithic/: CMakeLists.txt
Server/C-remake/monolithic/include/api/: calendar_management.h  director.h  event_management.h  user_management.h
Server/C-remake/monolithic/include/database/: database.h
Server/C-remake/monolithic/include/lib/: string_utils.h  table.h
Server/C-remake/monolithic/src/api/: calendar_management.c  director.c  event_management.c  user_management.c
Server/C-remake/monolithic/src/backend/: main.c
Server/C-remake/monolithic/src/lib/: string_utils.c  table.c
Server/C-remake/monolithic/tests/: test.js
Server/C-remake/src/: director.c  error_messages.txt  main.c  user_management.c
Server/C-remake/src/HeaderFiles/: database.h  director.h
Server/C-remake/src/ProgramFiles/: director.c  main  main.c  user_management.c
Server/C-remake/src/ProgramFiles/database/: database.c
Server/C-remake/src/api/: director.c  event_management.c  user_management.c
Server/C-remake/src/backend/: main.c
Server/C-remake/src/database/: database.c
Server/C-remake/src/lib/: string_utils.c  table.c
Server/C-remake/src/test/: main  main.c
Server/C-remake/src/tests/: test.js
Server/C-remake/standard/: meson.build
Server/C-remake/standard/src/api/include/: user_management.h
Server/C-remake/standard/src/api/src/: event_management.c
Server/C-remake/standard/src/database/src/: database.c
Server/C-remake/standard/src/lib/include/: error_handling.h  table.h
Server/C-remake/test/: database.db  director.c  main  main.c
Server/C-remake/test/database/: database.c
Server/C-remake/tests/: test.js
Server/Database/: Database.js  database.db
Server/Database_API/: CalendarManagement.js  CreateUser.js  Director.js  EventManagement.js  Login.js  UserManagement.js
Server/NodeBackend/: CalendarManagement.js  Database.js
Server/Old_Backend/: ServerMain.js  UnitTests.js
Server/copy/: CMakeLists.txt  Makefile
Server/copy/include/: database.h  director.h
Server/copy/src/: director.c  error_messages.txt  main.c
Server/copy/src/database/: database.c
Server/copy/tests/: test.js
Website/: Main.html  common.css
Website/About/: About.css  About.html
Website/CSS/: Main.css
Website/Home/: Home.css  Home.html  Home.js
Website/Login/: Login.css  Login.html  Login.js
Website/Main/: Main.css  Main.html  Main.js
Website/Signup/: Login.css  Login.html  Signup.css  Signup.html  Signup.js
backend/: mix.exs
backend/config/: config.exs  dev.exs  test.exs
node_old_backend/: server.js
(+57 files in other folders)
